force-app/main/default/objects/Portability_Settings__mdt/Portability_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Configuração de Portabilidade</label>
    <pluralLabel>Configurações de Portabilidade</pluralLabel>
</CustomObject>