force-app/main/default/objects/Portability_Settings__mdt/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <description>Código do erro encontrado durante a portabilidade</description>
    <label>Código do Erro</label>
    <type>TextArea</type>
</CustomField>