force-app/main/default/objects/Portability_Settings__mdt/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <description>Descrição do erro recebido por falha durante a portabilidade</description>
    <label>Descrição do Erro</label>
    <type>TextArea</type>
</CustomField>