force-app/main/default/objects/Portability_Settings__mdt/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Tipo de evento para se enviar ao Smart Messaging</description>
    <label>EventType</label>
    <type>TextArea</type>
</CustomField>