force-app/main/default/objects/Portability_Settings__mdt/listViews/Todos_os_campos.listView-meta.xml
<ListView>
    <fullName>Todos_os_campos</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>ErrorCode__c</columns>
    <columns>ErrorDescription__c</columns>
    <columns>EventType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os campos</label>
    <language>pt_BR</language>
</ListView>